.mdから移しました

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>チームで作るWebサイト</title>
+        <title>動物の種類</title>
         <link rel="stylesheet" href="/index.css">
     </head>
+
     <body>
-        <h1>チームで作成するWebサイトです</h1>
-        <p class="red">内容はこれから書きます</p>
+        <hl class="red">動物の一般的な分類</hl>
+    <ul>
+        <li>哺乳類</li>
+        <li>鳥類/li>
+        <li>爬虫類</li>
+        <li>両生類</li>
+        <li>魚類</li>
+        <li>節足動物</li>
+        <li>軟体動物</li>
+        <li>その他</li>
+    </ul>
     </body>
 </html>
