--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>動物の種類</title>
+        <title>身近なペット</title>
         <link rel="stylesheet" href="/index.css">
     </head>
 
     <body>
-        <hl class="red">動物の一般的な分類</hl>
+        <hl class="red">身近なペット</hl>
     <ul>
-        <li>哺乳類</li>
-        <li>鳥類/li>
-        <li>爬虫類</li>
-        <li>両生類</li>
-        <li>魚類</li>
-        <li>節足動物</li>
-        <li>軟体動物</li>
-        <li>その他</li>
+        <li>猫</li>
+        <li>犬</li>
+        <li>ウサギ</li>
+        <li>インコ</li>
+        <li>ハムスター</li>
+        <li>メダカ</li>
     </ul>
     </body>
 </html>
