--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <hl class="red">身近なペット</hl>
     <ul>
-        <li>猫</li>
+        <li class="k"><a href="neko.html">猫</a></li>
         <li>犬</li>
         <li>ウサギ</li>
         <li>インコ</li>
-        <li>ハムスター</li>
+        <li class="k"><a href="hamu.html">ハムスター</a></li>
         <li>メダカ</li>
     </ul>
     </body>
