ウサギのページを作った

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <hl class="red">身近なペット</hl>
     <ul>
         <li>猫</li>
-        <li>犬</li>
-        <li>ウサギ</li>
+        <li><a href="inu.html">犬</li>
+        <li><a href="usagi.html">ウサギ</a></li>
         <li>インコ</li>
         <li>ハムスター</li>
         <li>メダカ</li>
