ウサギのホームページ
写真と基本情報をついかした

--- a/usagi.html
+++ b/usagi.html
@@ -7,4 +7,26 @@
     </head>
     <body>
         <h1>ウサギ</h1>
+        <img src="./IMG_4985 (2).jpg" alt="ウサギの写真">  
+        <h2>ウサギの基本情報</h2>
+        <h3>学名</h3>
+        <p> *Oryctolagus cuniculus*（主に飼育されているのはアナウサギの改良種）</p>
+        <h3>寿命</h3>
+        <p>一般的に5～10年、飼育環境・健康管理によっては10年以上生きることもあります</p>
+        <h3>体重</h3>
+        <P>種類によって異なりますが、1～3kgの小型種から5kg以上の大型種までいます</P>
+        <h2>ウサギの性格・特徴</h2>
+        <h3>性格</h3>
+        <p>基本的にはおとなしく、臆病ですが、好奇心も強く人によく慣れます。個体差が大きく、活発な子やおっとりした子も。</p>
+        <h3>知能</h3>
+        <p>比較的賢く、名前や簡単な指示を覚えることができます。</p>
+        <h3>トイレのしつけ</h3>
+        <p>比較的簡単で、決まった場所で排泄できるようになります。</p>
+        <h2>代表的な種類</h2>
+        <h3>ネザーランドドワーフ</h3>
+        <p>小型で丸い顔が特徴、人気種。</p>
+        <h3>ホーランドロップ</h3>
+        <p>垂れ耳がかわいらしい小型種。</p>
+        <h3>ミニレッキス</h3>
+        <P>なめらかな短毛で肌触りが特徴。</P> 
     </body>
