ウサギのホームページ
画像の変更と新しい画像の挿入
文字を見やすくするために半透明ボックスを本文部分に追加

--- a/usagi.html
+++ b/usagi.html
@@ -4,31 +4,13 @@
     <meta charset="UTF-8">
     <title>ウサギ</title>
     <link rel="stylesheet" href="usagi.css">
-    <style>
-      .container {
-        display: flex;        /* これを追加！ */
-        align-items: flex-start;
-        gap: 40px;
-        margin: 40px;
-      }
-      .photo {
-        width: 400px;
-      }
-      .photo img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 8px;
-      }
-      .info {
-        max-width: 600px;
-      }
-    </style>
 </head>
 <body>
+  <div class="main-content">
     <h1>ウサギ</h1>
     <div class="container">
       <div class="photo">
-        <img src="./IMG_4985 (2).jpg" alt="ウサギの写真">
+        <img src="ウサギの画.png" alt="ウサギの写真">
       </div>
       <div class="info">
         <h2>ウサギの基本情報</h2>
@@ -38,22 +20,26 @@
         <p>一般的に5～10年、飼育環境・健康管理によっては10年以上生きることもあります</p>
         <h3>体重</h3>
         <p>種類によって異なりますが、1～3kgの小型種から5kg以上の大型種までいます</p>
-        </div>
+      </div>
     </div>
+
     <h2>ウサギの性格・特徴</h2>
-        <h3>性格</h3>
-        <p>基本的にはおとなしく、臆病ですが、好奇心も強く人によく慣れます。個体差が大きく、活発な子やおっとりした子も。</p>
-        <h3>知能</h3>
-        <p>比較的賢く、名前や簡単な指示を覚えることができます。</p>
-        <h3>トイレのしつけ</h3>
-        <p>比較的簡単で、決まった場所で排泄できるようになります。</p>
-        <h2>代表的な種類</h2>
-        <h3>ネザーランドドワーフ</h3>
-        <p>小型で丸い顔が特徴、人気種。</p>
-        <h3>ホーランドロップ</h3>
-        <p>垂れ耳がかわいらしい小型種。</p>
-        <h3>ミニレッキス</h3>
-        <p>なめらかな短毛で肌触りが特徴。</p>
-      
+    <h3>性格</h3>
+    <p>基本的にはおとなしく、臆病ですが、好奇心も強く人によく慣れます。個体差が大きく、活発な子やおっとりした子も。</p>
+    <h3>知能</h3>
+    <p>比較的賢く、名前や簡単な指示を覚えることができます。</p>
+    <h3>トイレのしつけ</h3>
+    <p>比較的簡単で、決まった場所で排泄できるようになります。</p>
+    
+    <h2>代表的な種類</h2>
+    <h3>ネザーランドドワーフ</h3>
+    <div class="picture">
+      <img src="ネザーランドドワーフ.png" alt="ウサギの写真"></div>
+      <p>小型で丸い顔が特徴、人気種。</p>
+    <h3>ホーランドロップ</h3>
+    <p>垂れ耳がかわいらしい小型種。</p>
+    <h3>ミニレッキス</h3>
+    <p>なめらかな短毛で肌触りが特徴。</p>
+  </div>
 </body>
 </html>
