うさぎのホームページ完成

--- a/usagi.html
+++ b/usagi.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <div class="main-content">
-    <h1>ウサギ</h1>
+    <div class="box">
+      <h1>ウサギ</h1>
+    </div>
     <div class="container">
       <div class="photo">
         <img src="ウサギの画.png" alt="ウサギの写真">
@@ -32,14 +34,22 @@
     <p>比較的簡単で、決まった場所で排泄できるようになります。</p>
     
     <h2>代表的な種類</h2>
+<div class="usagi-types-row">
+  <div class="usagi-type-card">
+    <img src="ネザーランドドワーフ.png" alt="ネザーランドドワーフ" />
     <h3>ネザーランドドワーフ</h3>
-    <div class="picture">
-      <img src="ネザーランドドワーフ.png" alt="ウサギの写真"></div>
-      <p>小型で丸い顔が特徴、人気種。</p>
+    <p>小型で丸い顔が特徴、人気種。</p>
+  </div>
+  <div class="usagi-type-card">
+    <img src="ホーランドロップの画像.png" alt="ホーランドロップ" />
     <h3>ホーランドロップ</h3>
     <p>垂れ耳がかわいらしい小型種。</p>
+  </div>
+  <div class="usagi-type-card">
+    <img src="ミニレッキス.png" alt="ミニレッキス" />
     <h3>ミニレッキス</h3>
     <p>なめらかな短毛で肌触りが特徴。</p>
   </div>
+</div>
 </body>
 </html>
