--- a/neko.html
+++ b/neko.html
@@ -1,8 +1,8 @@
 <body>
     <h1>猫</h1>
-    <div class="container">
+    <div class="container1">
       <div class="photo">
-        <img src="./neko.png" width="300" height="300 alt="猫の写真" class="syasinn">
+        <img src="./neko.png" width="200" height="200" alt="猫の写真" class="syasinn">
         <link rel="stylesheet" href="/hamuneko.css">
       </div>
       <div class="info">
