gitに適応されないから試す

--- a/hamu.html
+++ b/hamu.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="photo">
         <img src="./hamu.png" width="300" height="300 alt="ハムスターの写真" class="syasinn">
-        <link rel="stylesheet" href="/hamuneko.css">
+        <link rel="stylesheet" href="hamuneko.css">
 
       </div>
       <div class="info">
