--- a/neko.html
+++ b/neko.html
@@ -3,7 +3,7 @@
     <div class="container1">
       <div class="photo">
         <img src="./neko.png" width="200" height="200" alt="猫の写真" class="syasinn">
-        <link rel="stylesheet" href="/hamuneko.css">
+        <link rel="stylesheet" href="hamuneko.css">
       </div>
       <div class="info">
         <h2>猫の基本情報</h2>
