犬のホームページ
犬のホームページの作成

--- a/inu.html
+++ b/inu.html
@@ -12,44 +12,80 @@
     </div>
     <div class="container">
       <div class="photo">
-        <img src="ウサギの画.png" alt="ウサギの写真">
+        <img src="犬の画像.png" alt="犬の写真">
       </div>
       <div class="info">
-        <h2>ウサギの基本情報</h2>
+        <h2>犬の基本情報</h2>
         <h3>学名</h3>
-        <p><i>Oryctolagus cuniculus</i>（主に飼育されているのはアナウサギの改良種）</p>
+        <p><i> Canis lupus familiaris</i></p>
         <h3>寿命</h3>
-        <p>一般的に5～10年、飼育環境・健康管理によっては10年以上生きることもあります</p>
+        <p>小型犬で約12～16年、大型犬で約10～13年ほどです。</p>
         <h3>体重</h3>
-        <p>種類によって異なりますが、1～3kgの小型種から5kg以上の大型種までいます</p>
+        <p>豆柴などの超小型犬は2kg程度、グレート・デーンなどの大型犬は70kg以上になることもあります。</p>
       </div>
     </div>
 
-    <h2>ウサギの性格・特徴</h2>
+    <h2>犬の性格・特徴</h2>
     <h3>性格</h3>
-    <p>基本的にはおとなしく、臆病ですが、好奇心も強く人によく慣れます。個体差が大きく、活発な子やおっとりした子も。</p>
+    <p>好奇心旺盛、社会性が高い、人に懐きやすい種が多いです。</p>
     <h3>知能</h3>
-    <p>比較的賢く、名前や簡単な指示を覚えることができます。</p>
+    <p>しつけやトレーニングができるほど知能が高く、人とのコミュニケーションも豊かです。</p>
     <h3>トイレのしつけ</h3>
     <p>比較的簡単で、決まった場所で排泄できるようになります。</p>
     
     <h2>代表的な種類</h2>
-<div class="usagi-types-row">
-  <div class="usagi-type-card">
-    <img src="ネザーランドドワーフ.png" alt="ネザーランドドワーフ" />
-    <h3>ネザーランドドワーフ</h3>
-    <p>小型で丸い顔が特徴、人気種。</p>
+<h3 class="inu-category">小型犬</h3>
+<div class="inu-types-row">
+  <div class="inu-type-card">
+    <img src="トイプードルの画像.png" alt="トイプードル" />
+    <h3>トイプードル</h3>
+    <p>巻き毛が特徴で、抜け毛が少なく、アレルギーを持つ人にも人気。</p>
   </div>
-  <div class="usagi-type-card">
-    <img src="ホーランドロップの画像.png" alt="ホーランドロップ" />
-    <h3>ホーランドロップ</h3>
-    <p>垂れ耳がかわいらしい小型種。</p>
+  <div class="inu-type-card">
+    <img src="チワワの画像.png" alt="チワワ" />
+    <h3>チワワ</h3>
+    <p>世界最小の犬種。大きな目と耳が特徴的です。</p>
   </div>
-  <div class="usagi-type-card">
-    <img src="ミニレッキス.png" alt="ミニレッキス" />
-    <h3>ミニレッキス</h3>
-    <p>なめらかな短毛で肌触りが特徴。</p>
+  <div class="inu-type-card">
+    <img src="ミニチュアダックスフンドの画像.png" alt="ミニチュアダックスフンド" />
+    <h3>ミニチュアダックスフンド</h3>
+    <p>胴長短足のユニークな体型。</p>
   </div>
 </div>
-</body>
-</html>
+
+<h3 class="inu-category">中型犬</h3>
+<div class="inu-types-row">
+  <div class="inu-type-card">
+    <img src="柴犬の画像.png" alt="柴犬" />
+    <h3>柴犬</h3>
+    <p>日本原産の犬種で、巻き尾と立ち耳が特徴的。</p>
+  </div>
+  <div class="inu-type-card">
+    <img src="コーギーの画像.png" alt="コーギー" />
+    <h3>コーギー</h3>
+    <p>胴長短足で、愛らしい外見。イギリス王室でも人気があります。</p>
+  </div>
+  <div class="inu-type-card">
+    <img src="ビーグルの画像.png" alt="ビーグル" />
+    <h3>ビーグル</h3>
+    <p>嗅覚が優れていて、元々狩猟犬。三角形の耳が特徴。</p>
+  </div>
+</div>
+<h3 class="inu-category">大型犬</h3>
+<div class="inu-types-row">
+  <div class="inu-type-card">
+    <img src="ゴールデンレトリーバーの画像.png" alt="ゴールデンレトリバー" />
+    <h3>ゴールデンレトリバー</h3>
+    <p>穏やかで人懐っこく、賢いことで知られる大型犬。</p>
+  </div>
+  <div class="inu-type-card">
+    <img src="シベリアンハスキーの画像.png" alt="シベリアンハスキー" />
+    <h3>シベリアンハスキー</h3>
+    <p>力強い体と美しいブルーの目が特徴的な作業犬。</p>
+  </div>
+  <div class="inu-type-card">
+    <img src="グレートデーンの画像.png" alt="グレートデーン" />
+    <h3>グレートデーン</h3>
+    <p>「犬の中の巨人」と呼ばれるほど大型で優雅な犬種。</p>
+  </div>
+</div>
